typescript/checker/tests/conformance/es6/for-ofStatements/for-of11.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            37,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of11.ts:3:6
  |
3 | for (v of [0, ""]) { }
  |      ^

